<resources>
    <string name="app_name">My Application</string>
    <string name="PRN">PRN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">APP LOGO</string>
    <string name="signup">Sign UP</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="title_activity_kalp">kalp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kalp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home">Home</string>
    <string name="time_additional_notes"><![CDATA[Time & additional notes]]></string>
    <string name="eat_n_treat">Eat \'N\' Treat</string>
    <string name="eat_n_treat_wallet">Eat \'N\' Treat Wallet</string>
    <string name="remember_me">Remember me</string>
    <string name="eatntreat">Eat n Treat</string>
</resources>
